@@ -2,6 +2,7 @@ gunicorn (19.3-2) UNRELEASED; urgency=medium
 
   * Correct path in `rm` call to _gaiohttp.py (Closes: #803170)
   * wrap-and-sort -sa
+  * Tidy debian/rules
 
  -- Chris Lamb <lamby@debian.org>  Wed, 28 Oct 2015 09:08:04 +0000
 
